# veritas

./: .env.example  .gitignore  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
api/: db.py  events.py  kg.py  models.py  server.py
api/routes/: agents.py  checks.py  evidence.py  report.py  sessions.py  tools.py  verification.py
engine/: __init__.py  logging_config.py  main.py
engine/agents/: __init__.py  base.py  director.py  intern.py  kg_processor.py  manager.py  parallel.py
engine/audit/: __init__.py  decision_logger.py
engine/costs/: __init__.py  tracker.py
engine/events/: __init__.py
engine/interaction/: __init__.py  config.py  handler.py  listener.py  models.py
engine/knowledge/: __init__.py  graph.py  models.py  store.py
engine/memory/: external.py  hybrid.py
engine/models/: __init__.py  evidence.py  findings.py
engine/reports/: __init__.py  writer.py
engine/retrieval/: __init__.py  deduplication.py  evidence.py  memory_integration.py  query_expansion.py  vectorstore.py
engine/storage/: __init__.py  database.py
engine/tools/: __init__.py  academic_search.py  bright_data.py  web_search.py
engine/verification/: __init__.py  confidence.py  cove.py  critic.py  hhem.py  metrics.py  models.py  pipeline.py
scripts/: dev.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/check/[id]/: page.tsx
src/app/check/[id]/agents/: page.tsx
src/app/dashboard/: page.tsx
src/app/tools/ai-detector/: page.tsx
src/app/tools/image-detector/: page.tsx
src/app/tools/plagiarism/: page.tsx
src/components/: activity-feed.tsx  evidence-browser.tsx  new-check-form.tsx  question-modal.tsx  report-preview.tsx  sources-browser.tsx  verdict-badge.tsx
src/components/landing/: footer.tsx  hero.tsx  nav.tsx  process.tsx
src/lib/: api.ts  websocket.ts
(+3 files in other folders)
